# DSA_Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml
agents/: aws_agent.py  base_agent.py  databricks_agent.py  router.py  snowflake_agent.py
eval/: evaluate.py
eval/queries/: aws_queries.json  databricks_queries.json  snowflake_queries.json
infra/: 00_check_hardware.ps1  01_setup_vgm.md  02_install_ollama.ps1  03_pull_model.ps1  04_verify_toolcall.py  05_benchmark_inference.ps1  _probe_env.ps1  _set_env_user.ps1  setup_refresh_schedule.ps1
orchestrator/: pipeline.py  session.py
rag/: fetch_docs.ps1  ingestor.py  refresher.py  retriever.py
tests/: test_agents_mock.py  test_router.py  test_tools_mock.py
tools/: _common.py  aws_tools.py  databricks_tools.py  snowflake_tools.py
ui/: chat.py
