[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Inference
    "ollama>=0.4.0",
    # RAG
    "chromadb>=0.5.20",
    "sentence-transformers>=3.1.0",
    "langchain-text-splitters>=0.3.0",
    # Platform SDKs (mock-safe: no credentials needed at import time)
    "databricks-sdk>=0.25.0",
    "snowflake-connector-python>=3.8.0",
    "boto3>=1.35.0",
    # Utilities
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    # Dev / test
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "tools*", "rag*", "orchestrator*", "eval*"]
exclude = ["tests*", "infra*", "ui*"]
